<resources>
    <string name="app_name">LukaJojua</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="google">Google</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="registration">Register</string>
</resources>